Remove deprecated Number subtype constructors and explicit boxing